--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/M4XPRD/frontend-project-12#readme",
   "dependencies": {
-    "@hexlet/chat-server": "^1.1.6",
-    "yup": "^1.0.0"
+    "@hexlet/chat-server": "^1.1.6"
   }
 }
