--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
     "eslint-plugin-functional": "^5.0.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
@@ -15,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
