--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "eslint-plugin-functional": "^5.0.4",
