--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -28,6 +28,7 @@ rules:
   functional/no-conditional-statements: 0
   functional/no-expression-statement: 0
   functional/no-expression-statements: 0
+  functional/no-throw-statements: 0
   functional/immutable-data: 0
   functional/functional-parameters: 0
   functional/no-try-statement: 0
