--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
