--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^3.1.1",
     "yup": "^1.0.0"
   },
