--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,24 +6,26 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.3.2",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
-    "eslint-plugin-functional": "^5.0.4",
+    "eslint-plugin-functional": "^5.0.7",
     "formik": "^2.2.9",
+    "i18next": "^22.4.13",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
-    "web-vitals": "^3.1.1",
-    "yup": "^1.0.0"
+    "web-vitals": "^3.3.0",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +52,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
+    "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
