--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-functional": "^5.0.7",
     "formik": "^2.2.9",
     "i18next": "^22.4.13",
+    "leo-profanity": "^1.7.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
