--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@rollbar/react": "^0.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
+    "rollbar": "^2.26.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^3.3.0",
