--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "-s ./frontend/hexlet-chat-m4xprd/build"
   },
   "eslintConfig": {
     "extends": [
