--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build --prefix frontend",
+    "build-frontend": "npm ci && cd frontend && npm ci && npm run build",
     "start": "start-server -s ./frontend/build",
     "postinstall": "cd frontend && npm ci"
   },
